--- a/launcher/app.json
+++ b/launcher/app.json
@@ -3,30 +3,38 @@
   "bundles": [
     {
       "id": "org.rrd4j:rrd4j:3.4-SNAPSHOT",
-      "start-level": "2"
+      "start-level": "3"
     },
     {
       "id": "nu.muntea.htr:nu.muntea.htr.storage-rrd4j:0.0.1-SNAPSHOT",
-      "start-level": "2"
+      "start-level": "3"
     },
     {
       "id": "org.apache.felix:org.apache.felix.gogo.jline:1.1.0",
-      "start-level": "1"
+      "start-level": "2"
     },
     {
 	  "id": "org.jline:jline:3.7.0",
-      "start-level": "1"
+      "start-level": "2"
     },
     {
 	  "id": "org.fusesource.jansi:jansi:1.17.1",
-      "start-level": "1"
+      "start-level": "2"
     },
     {
       "id": "org.apache.felix:org.apache.felix.gogo.runtime:1.1.0",
-      "start-level": "1"
+      "start-level": "2"
     },
     {
       "id": "org.apache.felix:org.apache.felix.gogo.command:1.0.2",
+      "start-level": "2"
+    },
+    {
+      "id": "org.apache.felix:org.apache.felix.scr:2.1.12",
+      "start-level": "1"
+    },
+    {
+      "id": "org.apache.felix:org.apache.felix.configadmin:1.9.10",
       "start-level": "1"
     }
   ]
