--- a/launcher/app.json
+++ b/launcher/app.json
@@ -10,6 +10,34 @@
       "start-level": "3"
     },
     {
+      "id": "org.apache.geronimo.specs:geronimo-json_1.1_spec:1.1",
+      "start-level": "3"
+    },
+    {
+      "id": "org.apache.aries.spifly:org.apache.aries.spifly.dynamic.bundle:1.0.14",
+      "start-level": "3"
+    },
+    {
+      "id": "org.apache.aries:org.apache.aries.util:1.1.3",
+      "start-level": "3"
+    },
+    {
+      "id": "org.ow2.asm:asm:5.0.1",
+      "start-level": "3"
+    },
+    {
+      "id": "org.ow2.asm:asm-commons:5.0.1",
+      "start-level": "3"
+    },
+    {
+      "id": "org.ow2.asm:asm-tree:5.0.1",
+      "start-level": "3"
+    },
+    {
+      "id": "org.apache.johnzon:johnzon-core:1.1.10",
+      "start-level": "3"
+    },
+    {
       "id": "org.apache.felix:org.apache.felix.gogo.jline:1.1.0",
       "start-level": "2"
     },
