--- a/storage-rrd4j/pom.xml
+++ b/storage-rrd4j/pom.xml
@@ -38,6 +38,20 @@
             <version>3.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
+
+        <dependency>
+          <groupId>org.apache.geronimo.specs</groupId>
+          <artifactId>geronimo-json_1.1_spec</artifactId>
+          <version>1.0</version>
+          <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.johnzon</groupId>
+            <artifactId>johnzon-core</artifactId>
+            <version>1.1.10</version>
+            <scope>provided</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.junit.jupiter</groupId>
