--- a/launcher/app.json
+++ b/launcher/app.json
@@ -2,12 +2,16 @@
   "id": "nu.muntea:nu.muntea.htr:slingfeature:application:1.0.0",
   "bundles": [
     {
-      "id": "org.rrd4j:rrd4j:3.4-SNAPSHOT",
-      "start-level": "3"
-    },
-    {
       "id": "nu.muntea.htr:nu.muntea.htr.storage-rrd4j:0.0.1-SNAPSHOT",
       "start-level": "4"
+    },  
+    {
+      "id": "nu.muntea.htr:nu.muntea.htr.storage-api:0.0.1-SNAPSHOT",
+      "start-level": "4"
+    },  
+    {
+      "id": "org.rrd4j:rrd4j:3.4-SNAPSHOT",
+      "start-level": "3"
     },
     {
       "id": "org.apache.geronimo.specs:geronimo-json_1.1_spec:1.1",
