--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>storage-api</module>
         <module>storage-rrd4j</module>
     </modules>
 </project>
