--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -82,4 +82,5 @@
         <junit.jupiter.version>5.3.1</junit.jupiter.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <name>Home Temperature Reader - Parent POM</name>
 </project>
