--- a/launcher/app.json
+++ b/launcher/app.json
@@ -2,6 +2,18 @@
   "id": "nu.muntea:nu.muntea.htr:slingfeature:application:1.0.0",
   "bundles": [
     {
+      "id": "org.apache.felix:org.apache.felix.http.servlet-api:1.1.2",
+      "start-level": "5"
+    },
+    {
+      "id": "org.apache.felix:org.apache.felix.http.jetty:4.0.6",
+      "start-level": "5"
+    },
+    {
+      "id": "nu.muntea.htr:nu.muntea.htr.http:0.0.1-SNAPSHOT",
+      "start-level": "5"
+    },  
+    {
       "id": "nu.muntea.htr:nu.muntea.htr.storage-rrd4j:0.0.1-SNAPSHOT",
       "start-level": "4"
     },  
