--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>parent</module>
         <module>storage-api</module>
+        <module>http</module>
         <module>storage-rrd4j</module>
     </modules>
     <name>Home Temperature Reader</name>
