--- a/launcher/app.json
+++ b/launcher/app.json
@@ -70,6 +70,30 @@
       "start-level": "2"
     },
     {
+      "id": "ch.qos.logback:logback-classic:1.2.3",
+      "start-level": "1"
+    },
+    {
+      "id": "ch.qos.logback:logback-core:1.2.3",
+      "start-level": "1"
+    },
+    {
+      "id": "org.slf4j:jul-to-slf4j:1.7.25",
+      "start-level": "1"
+    },
+    {
+      "id": "org.slf4j:slf4j-api:1.7.25",
+      "start-level": "1"
+    },
+    {
+      "id": "org.apache.felix:org.apache.felix.logback:1.0.0",
+      "start-level": "1"
+    },
+    {
+      "id": "org.apache.felix:org.apache.felix.log:1.2.0",
+      "start-level": "1"
+    },
+    {
       "id": "org.apache.felix:org.apache.felix.scr:2.1.12",
       "start-level": "1"
     },
