Add a log bundle bridging jul to slf4j

--- a/launcher/app.json
+++ b/launcher/app.json
@@ -66,6 +66,10 @@
       "start-level": "1"
     },
     {
+      "id": "nu.muntea.htr:nu.muntea.htr.log:0.0.1-SNAPSHOT",
+      "start-level": "1"
+    },
+    {
       "id": "org.apache.felix:org.apache.felix.logback:1.0.0",
       "start-level": "1"
     },
