Start working on an RPM package

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>http</module>
         <module>storage-rrd4j</module>
         <module>log</module>
+        <module>launcher</module>
     </modules>
     <name>Home Temperature Reader</name>
 </project>
