--- a/launcher/src/main/features/config-ryzen.json
+++ b/launcher/src/main/features/config-ryzen.json
@@ -1,5 +1,5 @@
 {
-  "id": "nu.muntea:nu.muntea.htr:slingfeature:config-ryzen:1.0.0",
+  "id": "nu.muntea.htr:nu.muntea.htr.launcher:slingfeature:config-ryzen:0.0.1-SNAPSHOT",
   "configurations": {
   	"nu.muntea.htr.storage.rrd4j.internal.SensorsCpuTemperatureReader" : {
   		"sensors.json.path": "k10temp-pci-00c3/Tdie/temp1_input"
