--- a/launcher/src/main/features/config-ryzen.json
+++ b/launcher/src/main/features/config-ryzen.json
@@ -1,7 +1,7 @@
 {
   "id": "nu.muntea.htr:nu.muntea.htr.launcher:slingfeature:config-ryzen:0.0.1-SNAPSHOT",
   "configurations": {
-  	"nu.muntea.htr.storage.rrd4j.internal.SensorsCpuTemperatureReader" : {
+    "nu.muntea.htr.sensor.cpu_temp.internal.SensorsCpuTemperatureReader" : {
   		"sensors.json.path": "k10temp-pci-00c3/Tdie/temp1_input"
   	}
   }
