--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     <modules>
         <module>parent</module>
         <module>storage-api</module>
-        <module>http</module>
         <module>storage-rrd4j</module>
+        <module>sensor-cpu-temp</module>
         <module>log</module>
+        <module>http</module>
         <module>launcher</module>
     </modules>
     <name>Home Temperature Reader</name>
