--- a/storage-api/pom.xml
+++ b/storage-api/pom.xml
@@ -2,13 +2,13 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>nu.muntea.htr</groupId>
-    <artifactId>nu.muntea.htr.storage-api</artifactId>
+    <groupId>nu.muntea.custode</groupId>
+    <artifactId>nu.muntea.custode.storage-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     
     <parent>
-        <groupId>nu.muntea.htr</groupId>
-        <artifactId>nu.muntea.htr.parent</artifactId>
+        <groupId>nu.muntea.custode</groupId>
+        <artifactId>nu.muntea.custode.parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
@@ -36,5 +36,5 @@
             </plugin>
         </plugins>
     </build>
-    <name>Home Temperature Reader - Storage API</name>
+    <name>Custode - Storage API</name>
 </project>
