--- a/storage-rrd4j/pom.xml
+++ b/storage-rrd4j/pom.xml
@@ -2,12 +2,12 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>nu.muntea.htr.storage-rrd4j</artifactId>
+    <artifactId>nu.muntea.custode.storage-rrd4j</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     
     <parent>
-        <groupId>nu.muntea.htr</groupId>
-        <artifactId>nu.muntea.htr.parent</artifactId>
+        <groupId>nu.muntea.custode</groupId>
+        <artifactId>nu.muntea.custode.parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
@@ -36,7 +36,7 @@
         
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>nu.muntea.htr.storage-api</artifactId>
+            <artifactId>nu.muntea.custode.storage-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -89,5 +89,5 @@
             </plugin>
         </plugins>
     </build>
-    <name>Home Temperature Reader - RRD4J Implementation</name>
+    <name>Custode - RRD4J Implementation</name>
 </project>
