--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,8 +2,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>nu.muntea.htr</groupId>
-    <artifactId>nu.muntea.htr.parent</artifactId>
+    <groupId>nu.muntea.custode</groupId>
+    <artifactId>nu.muntea.custode.parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -82,5 +82,5 @@
         <junit.jupiter.version>5.3.1</junit.jupiter.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <name>Home Temperature Reader - Parent POM</name>
+    <name>Custode - Parent POM</name>
 </project>
