--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>nu.muntea.htr</groupId>
-    <artifactId>nu.muntea.htr.reactor</artifactId>
+    <groupId>nu.muntea.custode</groupId>
+    <artifactId>nu.muntea.custode.reactor</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -16,5 +16,5 @@
         <module>http</module>
         <module>launcher</module>
     </modules>
-    <name>Home Temperature Reader</name>
+    <name>Custode</name>
 </project>
