--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: java
 jdk:
   - openjdk8
-  - openjdk9
-  - openjdk10
-  - openjdk11
 cache:
   directories:
     - $HOME/.m2
 install: true
-script: mvn -V verify
+script: mvn -X -V verify
