Add rrd4j as a submodule
This works around us using a SNAPSHOT dependency. Note that
tests fail OOTB.

Relates to #2

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>rrd4j</module>
         <module>parent</module>
         <module>storage-api</module>
         <module>storage-rrd4j</module>
