Update to released rrd4j
This removes the need for maintaining a git submodule.

--- a/launcher/src/main/features/app.json
+++ b/launcher/src/main/features/app.json
@@ -25,7 +25,7 @@
       "start-level": "4"
     },  
     {
-      "id": "org.rrd4j:rrd4j:3.4-SNAPSHOT",
+      "id": "org.rrd4j:rrd4j:3.4",
       "start-level": "3"
     },
     {
